# arkavo-rs

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md  THIRD-PARTY-LICENSES.md  build-release.sh  generate-c2pa-certs.sh  run-arks.sh  rustfmt.toml  setup-dev-certs.sh  sonar-project.properties
.github/workflows/: integration-tests.yaml  rust.yaml  sonar.yaml
benches/: benchmarks.rs  binary_parser_benchmarks.rs
crates/fairplay-wrapper/: Cargo.toml
crates/fairplay-wrapper/src/: lib.rs
docs/: FAIRPLAY_INTEGRATION_TEST_PLAN.md  c2pa_video_drm.md  cbor-protocol-spec.md  chain-driven-kas-migration.md  fairplay.md  platform-proxy.md  standard_tdf_fairplay_integration.md  terminal_link_ntdf.md
docs/superpowers/plans/: 2026-05-27-platform-reverse-proxy.md
docs/testing/: TDF3_MEDIA_DRM_TESTING_PLAN.md
etc/contracts/: README.md
etc/contracts/content_rating/: Cargo.toml  lib.rs
etc/contracts/geo_fence_contract/: Cargo.toml  lib.rs
etc/contracts/simple_abac/: Cargo.toml
etc/contracts/timestamp_validator/: Cargo.toml  lib.rs
production/: README.md
src/: contract_simple_abac.rs  lib.rs  main.rs  media_metrics.rs  nanotdf.rs  session_manager.rs
src/chain/: cache.rs  client.rs  error.rs  mod.rs  types.rs  validator.rs
src/modules/: c2pa_signing.rs  cbor_protocol.rs  crypto.rs  cwt_token.rs  dpop.rs  fairplay.rs  http_rewrap.rs  media_api.rs  mod.rs  ntdf_token.rs  platform_proxy.rs  secure_keys.rs  terminal_link.rs  terminal_link_ntdf.rs
src/modules/rtmp/: encryption.rs  manifest.rs  mod.rs  registry.rs  server.rs  session.rs  stream_events.rs
tests/: c2pa_video_tests.rs  event_handlers_test.rs  event_storage_integration_test.rs  fairplay_integration_tests.rs  integration_test.rs  media_drm_tests.rs  s3_integration_test.rs  s3_storage_test.rs  server_settings_test.rs
