[workspace]
members = [".", "vendor/fpssdk", "crates/fairplay-wrapper"]
resolver = "2"

[package]
name = "arkavo-rs"
version = "0.9.2"
edition = "2021"
rust-version = "1.83.0"

[lib]
name = "nanotdf"
path = "src/lib.rs"

[[bin]]
name = "arkavo"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 16

[profile.bench]
lto = true

[dependencies]
elliptic-curve = "0.13.8"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures-util = "0.3.30"
hex = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
pem = "3.0.4"
aes-gcm = "0.10.3"
p256 = { version = "=0.13.2", features = ["ecdh"] }
once_cell = "1.19.0"
rand_core = "0.6.4"
sha2 = "0.10.8"
hkdf = "0.12.4"
tokio-native-tls = "0.3.1"
native-tls = "0.2.12"
env_logger = "0.11.5"
log = "0.4.22"
ink = "5.0.0"
jsonwebtoken = "9.3.0"
async-nats = "0.38.0"
redis = { version = "0.27.2", features = ["tokio-comp"] }
flatbuffers = "24.12.23"
scale = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"], optional = true }
bs58 = "0.5.1"
axum = "0.7"
tower = "0.4"
hyper = "1.0"
http-body-util = "0.1"
base64 = "0.22"
chrono = "0.4"
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.68.0"
uuid = { version = "1.11", features = ["v4"] }
fairplay-wrapper = { path = "crates/fairplay-wrapper", optional = true }

[features]
default = []
fairplay = ["fairplay-wrapper"]

[dev-dependencies]
criterion = "0.5.1"
serial_test = "3.2.0"
reqwest = { version = "0.12", features = ["json"] }

[[bench]]
name = "benchmarks"
harness = false
