[package]
name = "fairplay-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Arkavo <hello@arkavo.com>"]
description = "Safe Rust wrapper for Apple FairPlay Streaming Server SDK"
license = "MIT OR Apache-2.0"

[dependencies]
fpssdk = { path = "../../vendor/fpssdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
base64 = "0.22"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.11"
